--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,7 +83,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="PrimaryAction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="PrimaryInteraction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="SecondaryAction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
-+ActionMappings=(ActionName="TertiaryAction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
++ActionMappings=(ActionName="ThirdAction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
